out.txt
c:\Users\gongs\Desktop\test\gongsil_chatbot.js:324
    div.className = \`chat-msg \${type}-msg\`;
                    ^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.0
